prusti-tests/tests/cargo_verify/failing_crate/output.stderr
    Updating crates.io index
 Downloading crates ...
  Downloaded [..]
  Downloaded [..]
  Downloaded [..]
  Downloaded [..]
  Downloaded [..]
  Downloaded [..]
  Downloaded [..]
  Downloaded [..]
  Downloaded [..]
  Downloaded [..]
  Downloaded [..]
  Downloaded [..]
  Downloaded [..]
   Compiling [..]
   Compiling [..]
   Compiling [..]
   Compiling [..]
   Compiling [..]
   Compiling [..]
   Compiling [..]
   Compiling [..]
   Compiling [..]
   Compiling [..]
   Compiling [..]
   Compiling [..]
   Compiling [..]
   Compiling prusti-specs v0.1.0 ([ROOT]/foo/prusti-specs)
   Compiling prusti-contracts-[..] v0.1.0 ([ROOT]/foo/prusti-contracts-[..])
   Compiling prusti-contracts-[..] v0.1.0 ([ROOT]/foo/prusti-contracts-[..])
    Checking prusti-contracts v0.1.0 ([ROOT]/foo/prusti-contracts)
    Checking failing_crate v0.1.0 ([ROOT]/foo)
warning: function is never used: `requires_large_number`
 --> src/utils.rs:4:8
  |
4 | pub fn requires_large_number(x: i32) -> i32 {
  |        ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(dead_code)]` on by default

warning: function is never used: `bad_client`
 --> src/main.rs:5:4
  |
5 | fn bad_client() {
  |    ^^^^^^^^^^

SLF4J: Class path contains multiple SLF4J bindings.
SLF4J: Found binding in [jar:file:[..]/viper_tools/backends/silicon.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: Found binding in [jar:file:[..]/viper_tools/backends/ch.qos.logback.logback-classic-1.2.3.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See http://www.slf4j.org/codes.html#multiple_bindings for an explanation.
SLF4J: Actual binding is of type [ch.qos.logback.classic.util.ContextSelectorStaticBinder]
error: [Prusti: verification error] precondition might not hold.
 --> src/main.rs:6:5
  |
6 |     requires_large_number(10);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: the failing assertion is here
 --> src/utils.rs:3:12
  |
3 | #[requires(x > 999)]
  |            ^^^^^^^

error: aborting due to previous error; 2 warnings emitted

error: could not compile `failing_crate`

To learn more, run the command again with --verbose.
